[package]
name = "roblox_install"
description = "Get the install directory of Roblox in code"
version = "0.1.2"
authors = ["Kampfkarren <kampfkarren@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/Kampfkarren/roblox-install"
keywords = ["roblox"]
edition = "2018"

[target.'cfg(windows)'.dependencies]
winreg = "0.6"
