[package]
name = "roblox_install"
description = "Get the install directory of Roblox in code"
version = "0.3.0"
authors = ["Kampfkarren <kampfkarren@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/Kampfkarren/roblox-install"
keywords = ["roblox"]
edition = "2018"
readme = "README.md"

[target.'cfg(windows)'.dependencies]
winreg = "0.6"

[dependencies]
dirs = "2.0.2"
