[package]
name = "roblox_install"
description = "Get the install directory of Roblox in code"
version = "1.0.0"
authors = ["Kampfkarren <kampfkarren@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/Kampfkarren/roblox-install"
keywords = ["roblox"]
edition = "2018"
readme = "README.md"

[target.'cfg(windows)'.dependencies]
winreg = "0.6"

[dependencies]
clap = { version = "4.6.1", features = ["derive"], optional = true }
dirs = "2.0.2"
thiserror = "1.0.24"

[[bin]]
name = "roblox-install-cli"
required-features = ["cli"]
path = "src/bin.rs"

[features]
cli = ["clap"]
